test/corpus/elements.txt
================================================================================
Simple element
================================================================================
<div>hello</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name))))

================================================================================
Nested elements
================================================================================
<div><span>text</span></div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

================================================================================
Element with attributes
================================================================================
<div class="test" id="main">content</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (text)
    (end_tag
      (tag_name))))

================================================================================
Self-closing tag (non-void)
================================================================================
<div />
--------------------------------------------------------------------------------

(document
  (element
    (self_closing_tag
      (tag_name))))

================================================================================
Void element with slash
================================================================================
<img src="test.png" />
--------------------------------------------------------------------------------

(document
  (void_element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))))

================================================================================
Void element without slash
================================================================================
<br>
--------------------------------------------------------------------------------

(document
  (void_element
    (start_tag
      (tag_name))))

================================================================================
Script element
================================================================================
<script>console.log('test');</script>
--------------------------------------------------------------------------------

(document
  (script_element
    (start_tag
      (tag_name))
    (raw_text)
    (end_tag
      (tag_name))))

================================================================================
Style element
================================================================================
<style>body { margin: 0; }</style>
--------------------------------------------------------------------------------

(document
  (style_element
    (start_tag
      (tag_name))
    (raw_text)
    (end_tag
      (tag_name))))

================================================================================
Comment
================================================================================
<!-- test -->
--------------------------------------------------------------------------------

(document
  (comment))

================================================================================
DOCTYPE
================================================================================
<!DOCTYPE html>
--------------------------------------------------------------------------------

(document
  (doctype))
