test/corpus/erroneous_end_tags.txt
================================================================================
erroneous end tag - closing unopened element
================================================================================
<div>Content</div></span>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name)))
  (erroneous_end_tag (tag_name)))

================================================================================
erroneous end tag - mismatched closing tag
================================================================================
<div></span></div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (erroneous_end_tag (tag_name))
    (end_tag (tag_name))))

================================================================================
erroneous end tag - extra closing tag
================================================================================
<p>Text</p></p>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name)))
  (erroneous_end_tag (tag_name)))

================================================================================
erroneous end tag - closing void element
================================================================================
<br></br>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name)))
  (erroneous_end_tag (tag_name)))

================================================================================
erroneous end tag - multiple erroneous tags
================================================================================
</foo></bar></baz>
--------------------------------------------------------------------------------

(document
  (erroneous_end_tag (tag_name))
  (erroneous_end_tag (tag_name))
  (erroneous_end_tag (tag_name)))

================================================================================
erroneous end tag - between valid elements
================================================================================
<div>A</div></wrong><div>B</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name)))
  (erroneous_end_tag (tag_name))
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
erroneous end tag - nested inside valid element
================================================================================
<div>
  Text
  </wrong>
  More text
</div>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (erroneous_end_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
erroneous end tag - closing tag with whitespace
================================================================================
</wrong  >
--------------------------------------------------------------------------------

(document
  (erroneous_end_tag (tag_name)))
