test/corpus/escapable_raw_text_elements.txt
================================================================================
textarea - empty
================================================================================
<textarea></textarea>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))

================================================================================
textarea - with content
================================================================================
<textarea>Hello World</textarea>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
textarea - with attributes
================================================================================
<textarea name="message" rows="4" cols="50">Content</textarea>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute (attribute_name) (quoted_attribute_value (quoted_attribute_value_content)))
      (attribute (attribute_name) (quoted_attribute_value (quoted_attribute_value_content)))
      (attribute (attribute_name) (quoted_attribute_value (quoted_attribute_value_content))))
    (text)
    (end_tag (tag_name))))

================================================================================
textarea - with HTML-like content (not parsed as HTML)
================================================================================
<textarea><div>Not parsed as HTML</div></textarea>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
textarea - with character reference
================================================================================
<textarea>&lt;escaped&gt;</textarea>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (character_reference)
    (text)
    (character_reference)
    (end_tag (tag_name))))

================================================================================
textarea - multiline content
================================================================================
<textarea>
Line 1
Line 2
Line 3
</textarea>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
title - empty
================================================================================
<title></title>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (end_tag (tag_name))))

================================================================================
title - with content
================================================================================
<title>Page Title</title>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
title - with character reference
================================================================================
<title>Title &amp; Subtitle</title>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (character_reference)
    (text)
    (end_tag (tag_name))))

================================================================================
title - with HTML-like content (not parsed)
================================================================================
<title><b>Bold</b> Title</title>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name))))

================================================================================
textarea - with numeric character reference
================================================================================
<textarea>&#60;tag&#62;</textarea>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (character_reference)
    (text)
    (character_reference)
    (end_tag (tag_name))))

================================================================================
textarea - with hex character reference
================================================================================
<textarea>&#x3C;tag&#x3E;</textarea>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (character_reference)
    (text)
    (character_reference)
    (end_tag (tag_name))))

================================================================================
textarea - mixed content with character references
================================================================================
<textarea>Hello &amp; welcome to &lt;World&gt;</textarea>
--------------------------------------------------------------------------------

(document
  (element
    (start_tag (tag_name))
    (text)
    (character_reference)
    (text)
    (character_reference)
    (text)
    (character_reference)
    (end_tag (tag_name))))
